[package]
name = "nyquest"
version = "3.1.1"
edition = "2021"
description = "Semantic Compression Proxy for LLMs — Full Rust Stack"
authors = ["Mike <Mike@256kmagic.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server (axum)
axum = { version = "0.8", features = ["json", "query", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Regex (core of compression engine)
regex = "1"
fancy-regex = "0.14"
once_cell = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4"] }

# Crypto (security vault — optional via feature)
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
hex = "0.4"

# Async streaming (SSE)
futures = "0.3"
tokio-stream = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }

# Templating (dashboard HTML)
askama = "0.12"

# Misc
bytes = "1"
thiserror = "2"
anyhow = "1"
md-5 = "0.10"
shellexpand = "3"

# Interactive CLI installer
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
dirs = "6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

